HISTORY
=======

1.0b2 - Unreleased
------------------

- The "pre-loading" of notes loaded the wrong notes.

1.0b1 - 2012-03-30
------------------

- Initial release.
